compilateurMinCaml/tests/typechecking/invalid/fadd.ml
print_int (int_of_float (1.5+.true))